--- a/sdwan-secure/acme-enterprise.yaml
+++ b/sdwan-secure/acme-enterprise.yaml
@@ -5,13 +5,12 @@ description: >
   On the router VM netem simulate a WAN. MPLS is a normal network.
   To be run before deployment:
   $ cfy secret create fgt_license -f ../fortigate/FGT.lic
-  $ cfy secret create fmg_password -s XXXX
 imports:
   - http://www.getcloudify.org/spec/cloudify/4.5.5/types.yaml
   - http://www.getcloudify.org/spec/openstack-plugin/2.14.7/plugin.yaml
+  #- plugin:cloudify-openstack-plugin
   - plugin:cloudify-utilities-plugin
   - includes/wan.yaml
-  - plugins/cloudify-fortimanager-plugin/plugin.yaml
 
 
 inputs:
@@ -27,44 +26,40 @@ inputs:
      default: {}
   agent_user:
       default: "ubuntu"
-  fmg_ip:
-    default: {}
-
 
   mgmt_network_name:
     default: "mgmt"
   external_network_name:
     default: "ext_net"
 
+  fortigate_license_filename:
+    type: string
+    description: Name of the Fortigate license file (It will be uploaded to Fortigate VM with this name). It should have .lic file extension.
+    default: FGVM00TM19001469.lic
 
 
 dsl_definitions:
 
-# The configuration of openstack access is in the file /etc/cloudify/openstack_config.json
-# For simplicity of blueprint reading.
-
-#  ##openstack_config: &openstack_config
-#    username: { get_secret: keystone_username }
-#    password: { get_secret: keystone_password }
-#    tenant_name: { get_secret: keystone_tenant_name }
-#    auth_url: { get_secret: keystone_url }
-#    region: { get_secret: region }
+  openstack_config: &openstack_config
+    username: { get_secret: keystone_username }
+    password: { get_secret: keystone_password }
+    tenant_name: { get_secret: keystone_tenant_name }
+    auth_url: { get_secret: keystone_url }
+    region: { get_secret: keystone_region }
 
 node_templates:
 
-
 # networks
-
-
   dc_network:
     type: cloudify.openstack.nodes.Network
     properties:
+      openstack_config: *openstack_config
       resource_id: dc_network
 
   dc_subnet:
     type: cloudify.openstack.nodes.Subnet
     properties:
-      ##openstack_config: *openstack_config
+      openstack_config: *openstack_config
       resource_id: dc_subnet
       subnet:
         host_routes: [ {"nexthop": "10.40.40.254", "destination": "10.20.20.0/24"} ]
@@ -98,12 +93,13 @@ node_templates:
   mpls_network:
     type: cloudify.openstack.nodes.Network
     properties:
+      openstack_config: *openstack_config
       resource_id: mpls_network
 
   mpls_subnet:
     type: cloudify.openstack.nodes.Subnet
     properties:
-      ##openstack_config: *openstack_config
+      openstack_config: *openstack_config
       resource_id: mpls_subnet
       subnet:
         host_routes: [ {"nexthop": "10.30.30.1", "destination": "172.27.40.0/24"} ]
@@ -123,12 +119,13 @@ node_templates:
   branchea_lan:
     type: cloudify.openstack.nodes.Network
     properties:
+      openstack_config: *openstack_config
       resource_id: branchea_lan
 
   branchea_subnet:
     type: cloudify.openstack.nodes.Subnet
     properties:
-      ##openstack_config: *openstack_config
+      openstack_config: *openstack_config
       resource_id: branchea_subnet
       subnet:
         host_routes: [ {"nexthop": "192.168.12.254", "destination": "10.0.0.0/8"}, {"nexthop": "192.168.12.254", "destination": "172.27.40.0/24"} ]
@@ -146,14 +143,15 @@ node_templates:
   brancheA_port:
     type: cloudify.openstack.nodes.Port
     properties:
+      openstack_config: *openstack_config
       resource_id: brancheA_port
       fixed_ip: "192.168.12.254"
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        create:
-          inputs:
-            args:
-              port_security_enabled: False
+#    interfaces:
+#      cloudify.interfaces.lifecycle:
+#        create:
+#          inputs:
+#            args:
+#              port_security_enabled: False
     relationships:
       - target: branchea_lan
         type: cloudify.relationships.contained_in
@@ -164,6 +162,8 @@ node_templates:
 
   fosa_floating_ip:
     type: cloudify.openstack.nodes.FloatingIP
+    properties:
+      openstack_config: *openstack_config
     interfaces:
       cloudify.interfaces.lifecycle:
         create:
@@ -171,9 +171,21 @@ node_templates:
             args:
               floating_network_name: { get_input: external_network_name }
 
+  # Cloud config for fortigate, responsible for license file upload which is being applied at installation
+  branchea_fortigate_cloud_config:
+    type: cloudify.nodes.CloudInit.CloudConfig
+    properties:
+      resource_config:
+        write_files:
+          - path: { get_input: fortigate_license_filename }
+            owner: root:root
+            permissions: '0444'
+            content: { get_secret: fgt_license }
+
   branchea_fortigate:
     type: cloudify.openstack.nodes.Server
     properties:
+      openstack_config: *openstack_config
       server:
         image_name: { get_input: fos_image }
         flavor_name: { get_input: fos_flavor }
@@ -181,115 +193,13 @@ node_templates:
         key_name: { get_input: key_name }
       agent_config:
         install_method: none # do not install agent
-      ##openstack_config: *openstack_config
       management_network_name: { get_input: mgmt_network_name }
     interfaces:
       cloudify.interfaces.lifecycle:
         create:
           inputs:
             args:
-              userdata: |
-                config system admin
-                    edit "admin"
-                        set password fortinet
-                    next
-                end
-                #FOS VM Config File
-                config system interface
-                edit port1
-                 set alias "mgmt"
-                 set mode dhcp
-                 set allowaccess ping https ssh http snmp fgfm
-                 set defaultgw enable
-                next
-                edit port2
-                  set alias "mpls"
-                  set role wan
-                  set mode dhcp
-                  set allowaccess ping
-                  set defaultgw disable
-                next
-                edit port3
-                set alias "isp"
-                set role wan
-                set mode dhcp
-                set allowaccess ping
-                 set defaultgw disable
-                next
-                edit port4
-                  set alias "lan"
-                  set role lan
-                  set mode dhcp
-                  set allowaccess ping
-                   set defaultgw disable
-                  next
-                end
-                config router static
-                    edit 1
-                        set dst 172.27.40.0 255.255.255.0
-                        set gateway 10.20.20.254
-                        set device "port3"
-                    next
-                    edit 2
-                        set dst 172.27.40.0 255.255.255.0
-                        set gateway 10.30.30.1
-                        set device "port2"
-                    next
-                end
-                config firewall address
-                    edit "DC"
-                        set color 6
-                        set subnet 172.27.40.0 255.255.255.0
-                    next
-                end
-                config system virtual-wan-link
-                  set status enable
-                  set load-balance-mode source-dest-ip-based
-                  config members
-                      edit 1
-                          set interface "port2"
-                      next
-                      edit 2
-                          set interface "port3"
-                          set gateway 10.40.40.254
-                      next
-                  end
-                  config health-check
-                      edit "ping"
-                          set server "172.27.40.1"
-                          set failtime 3
-                          set members 1
-                          config sla
-                              edit 1
-                              next
-                          end
-                      next
-                  end
-                  config service
-                      edit 1
-                          set name "streaming"
-                          set mode priority
-                          set dst "DC"
-                          set health-check "ping"
-                          set priority-members 1 2
-                      next
-                  end
-                end
-                config firewall policy
-                edit 1
-                  set name "LAN to SDWAN"
-                  set srcintf "port4"
-                  set dstintf "virtual-wan-link"
-                  set srcaddr "all"
-                  set dstaddr "all"
-                  set action accept
-                  set schedule "always"
-                  set service "ALL"
-                  set nat enable
-                next
-                end
-              files:
-               license: { get_secret: fgt_license }
+              userdata: { get_attribute: [ branchea_fortigate_cloud_config, cloud_config ] }
     relationships:
       - target: fosa_floating_ip
         type: cloudify.openstack.server_connected_to_floating_ip
@@ -307,9 +217,41 @@ node_templates:
         type: cloudify.relationships.connected_to
       - target: brancheA_port
         type: cloudify.relationships.depends_on
+      - type: cloudify.relationships.depends_on
+        target: branchea_fortigate_cloud_config
+
+  branchea_fortigate_config:
+    type: cloudify.terminal.raw
+    interfaces:
+      cloudify.interfaces.lifecycle:
+        create:
+          inputs:
+            terminal_auth: &terminal_auth
+              user: admin
+              password: ''
+              ip: { get_attribute: [branchea_fortigate, ip ] }
+              promt_check:
+                - '#'
+                - '$'
+              errors:
+                - "Command fail."
+            calls:
+              - action: exit
+        configure:
+          inputs:
+            terminal_auth: *terminal_auth
+            calls:
+              - template: scripts/fortigate/fortigate-config.txt
+    relationships:
+      - type: cloudify.relationships.depends_on
+        target: branchea_fortigate
+
+
 
   branchea_ub_floating_ip:
     type: cloudify.openstack.nodes.FloatingIP
+    properties:
+      openstack_config: *openstack_config
     interfaces:
       cloudify.interfaces.lifecycle:
         create:
@@ -319,6 +261,8 @@ node_templates:
 
   dc_ub_floating_ip:
     type: cloudify.openstack.nodes.FloatingIP
+    properties:
+      openstack_config: *openstack_config
     interfaces:
       cloudify.interfaces.lifecycle:
         create:
@@ -337,7 +281,7 @@ node_templates:
         key_name: { get_input: key_name }
       agent_config:
         install_method: none # Bug in cloudify agents use internal ip and not floating
-      ##openstack_config: *openstack_config
+      openstack_config: *openstack_config
       management_network_name: { get_input: mgmt_network_name }
     interfaces:
       cloudify.interfaces.lifecycle:
@@ -387,34 +331,6 @@ node_templates:
         type: cloudify.relationships.depends_on
       - target: branchea_ub_floating_ip
         type: cloudify.openstack.server_connected_to_floating_ip
-
-  add-fortigate-tofmg:
-    type: cloudify.fortinet.fortimanager
-    properties:
-      host: { get_input: fmg_ip }
-      username: "admin"
-      password: { get_secret: fmg_password }
-      use_ssl: True
-      verify_ssl: False
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        start:
-          inputs:
-            template_file: templates/add-fortigate.yaml
-            params:
-              fgt_password: "fortinet"
-              fgt_ip: { get_attribute: [branchea_fortigate, ip ] }
-              fgt_user: "admin"
-              fgt_name: "branchea_fortigate"
-        stop:
-          inputs:
-            template_file: templates/remove-fortigate.yaml
-            params:
-              fgt_name: "branchea_fortigate"
-    relationships:
-      - target:  branchea_fortigate
-        type: cloudify.relationships.depends_on
-
 
 # creating output for easing the testing:
 outputs:
