--- a/sdwan-secure/antmedia.yaml
+++ b/sdwan-secure/antmedia.yaml
@@ -27,8 +27,8 @@ inputs:
      default: {}
   agent_user:
       default: "ubuntu"
-  fmg_ip:
-    default: {}
+#  fmg_ip:
+#    default: {}
 
   mgmt_network_name:
     default: "mgmt"
@@ -39,33 +39,34 @@ inputs:
 
 dsl_definitions:
 
-# The configuration of openstack access is in the file /etc/cloudify/openstack_config.json
-# For simplicity of blueprint reading.
+  openstack_config: &openstack_config
+    username: { get_secret: keystone_username }
+    password: { get_secret: keystone_password }
+    tenant_name: { get_secret: keystone_tenant_name }
+    auth_url: { get_secret: keystone_url }
+    region: { get_secret: keystone_region }
 
-#  ##openstack_config: &openstack_config
-#    username: { get_secret: keystone_username }
-#    password: { get_secret: keystone_password }
-#    tenant_name: { get_secret: keystone_tenant_name }
-#    auth_url: { get_secret: keystone_url }
-#    region: { get_secret: region }
 
 node_templates:
 
   dc_network:
     type: cloudify.openstack.nodes.Network
     properties:
+      openstack_config: *openstack_config
       resource_id: dc_network
       use_external_resource: true
 
   dc_subnet:
     type: cloudify.openstack.nodes.Subnet
     properties:
-      ##openstack_config: *openstack_config
+      openstack_config: *openstack_config
       resource_id: dc_subnet
       use_external_resource: true
 
   antmedia_floating_ip:
     type: cloudify.openstack.nodes.FloatingIP
+    properties:
+      openstack_config: *openstack_config
     interfaces:
       cloudify.interfaces.lifecycle:
         create:
@@ -78,6 +79,7 @@ node_templates:
   antmedia_security_group:
     type: cloudify.openstack.nodes.SecurityGroup
     properties:
+      openstack_config: *openstack_config
       resource_id: antmedia_security_group
       rules:
         - remote_ip_prefix: 0.0.0.0/0
@@ -153,6 +155,7 @@ node_templates:
   antmedia_ubuntu:
     type: cloudify.openstack.nodes.Server
     properties:
+      openstack_config: *openstack_config
       server:
         image_name: { get_input: ub_image }
         flavor_name: { get_input: ub_flavor }
