--- a/sdwan-secure/inputs-citycloud.yaml
+++ b/sdwan-secure/inputs-citycloud.yaml
@@ -1,9 +1,8 @@
-fos_image: 'fgt60'
+fos_image: 'Fortigate-DHCP'
 fos_flavor: '1C-1GB-50GB'
-ub_image: 'Ubuntu 16.04 Xenial Xerus'
+ub_image: 'Ubuntu_16.04'
 ub_flavor: '2C-4GB-50GB'
-mgmt_network_name: "mgmt"
+mgmt_network_name: "private_network"
 key_name: 'cloudify'
-external_network_name: "ext-net"
+external_network_name: "external_network"
 agent_user: "ubuntu"
-fmg_ip: "192.168.1.99"
