--- a/sdwan-secure/antmedia.yaml
+++ b/sdwan-secure/antmedia.yaml
@@ -7,8 +7,8 @@ description: >
 
 imports:
   - http://www.getcloudify.org/spec/cloudify/4.0/types.yaml
-  - http://www.getcloudify.org/spec/openstack-plugin/2.14.7/plugin.yaml
-   # - plugin:cloudify-openstack-plugin
+    #  - http://www.getcloudify.org/spec/openstack-plugin/2.14.7/plugin.yaml
+  - plugin:cloudify-openstack-plugin
   - plugin:cloudify-diamond-plugin
   - plugin:cloudify-utilities-plugin
   - types/antmedia.yaml
@@ -27,8 +27,8 @@ inputs:
      default: {}
   agent_user:
       default: "ubuntu"
-#  fmg_ip:
-#    default: {}
+  fmg_ip:
+     default: {}
 
   mgmt_network_name:
     default: "mgmt"
